--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-g" data-rv-view="4" style="background-image: url(assets/images/crack-stone-1920x1200.jpg);">
+<section class="engine"><a href="https://mobirise.co/e">web builder software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-g" data-rv-view="4" style="background-image: url(assets/images/crack-stone-1920x1200.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);"></div>
 
@@ -71,10 +71,6 @@
                     <h1 class="mbr-section-title display-1">Caso 1105: ANA</h1>
                     <p class="mbr-section-lead lead">Una estudiante aparece muerta en la entrada de la universidad, todo apunta a que ella decidió suicidarse. Sin embargo, a lo largo de la investigación del caso 1105 aparecen pistas de un posible asesinato. ¿Qué ocurrió realmente con Ana?</p>
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-white" href="historia.html" target="_blank">LEER AHORA</a> </div>
-                  <audio controls="" autoplay="" loop="">
-  <source src="nox of arcana.ogg" type="nox of arcana.ogg">
-  <source src="nox of arcana.mp3" type="audio/mp3">
-</audio>
                 </div>
             </div>
         </div>
@@ -187,6 +183,23 @@
     </div>
 </section>
 
+<section class="mbr-section mbr-section__container" id="video2-2l" data-rv-view="21" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="mbr-figure">
+                    <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Y_2z_qBz56U?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+
+                    <div class="mbr-figure-caption">
+                        <div class="container">Caso 1105: Ana</div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section class="mbr-section form2" id="form2-20" data-rv-view="15" style="background-color: rgb(0, 0, 0); padding-top: 40px; padding-bottom: 80px;">
         
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -205,7 +218,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Gracias por suscribirte</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Suscribete&amp;nbsp;">
-                        <input type="hidden" value="HeohclYMlIFypJ26V1v0MNHdpBH5ioARp9dZKyL3a66Wyb1Ty58DBwMrM4imBwbd5xqF1fA5f1EVWQUObA4lP34oGgX0L2eE/5c0eY7aTvEs+T1LKw8SbdJ1qxZGy1lm" data-form-email="true">
+                        <input type="hidden" value="6NJvrEN+QgzSdY+t/oWzp6hjTnt2L/lgnOtlhkzkslQl7S5wyUo8EpLTkVYObFBgo18N27TmpsNU3UMTgNCMMqcKe+IDXCmlRhHsbw0+qOkcwD57T5CvA40/4z/lc3gP" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Escribe tu correo..." id="form2-20-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
