--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
                     <h1 class="mbr-section-title display-1">Caso 1105: ANA</h1>
                     <p class="mbr-section-lead lead">Una estudiante aparece muerta en la entrada de la universidad, todo apunta a que ella decidió suicidarse. Sin embargo, a lo largo de la investigación del caso 1105 aparecen pistas de un posible asesinato. ¿Qué ocurrió realmente con Ana?</p>
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-white" href="historia.html" target="_blank">LEER AHORA</a> </div>
-                </div>
+                <audio autoplay="" loop="" controls="">
+
+  <source src="nox of arcana.ogg" type="nox of arcana.ogg">
+
+  <source src="nox of arcana.mp3" type="audio/mp3">
+
+</audio>
+              </div>
             </div>
         </div>
     </div>
